conformance/tests/gateway-invalid-tls-backend-configuration.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-client-certificate-nonexistent-secret
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
  tls:
    backend:
      clientCertificateRef:
        group: ""
        kind: Secret
        name: nonexistent-certificate
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-client-certificate-unsupported-group
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
  tls:
    backend:
      clientCertificateRef:
        group: wrong.group.company.io
        kind: Secret
        name: tls-validity-checks-certificate
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-client-certificate-unsupported-kind
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
  tls:
    backend:
      clientCertificateRef:
        group: ""
        kind: WrongKind
        name: tls-validity-checks-certificate
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-client-certificate-malformed-secret
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
  tls:
    backend:
      clientCertificateRef:
        group: ""
        kind: Secret
        name: malformed-client-certificate
---
apiVersion: v1
kind: Secret
metadata:
  name: malformed-client-certificate
  namespace: gateway-conformance-infra
# this certificate is invalid because it does not contain the keys
# named tls.crt and tls.key
data: {}
type: Opaque
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-client-certificate-missing-reference-grant
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
  tls:
    backend:
      clientCertificateRef:
        group: ""
        kind: Secret
        name: certificate
        namespace: gateway-conformance-web-backend
